add: 디바이스 UI 약통 모양으로 커스텀.

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/device_tab_main.xml
@@ -106,7 +106,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#D8D8DA"
+                                android:background="@drawable/device_edit_circle_top"
                                 android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
@@ -116,7 +116,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#D8D8DA"
+                                android:background="@drawable/device_ui_rectangle"
                                 android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
@@ -132,7 +132,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#AAABAE"
+                                android:background="@drawable/device_edit_circle_bottom"
                                 android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
@@ -142,7 +142,7 @@
                                 android:layout_width="100dp"
                                 android:layout_height="100dp"
                                 android:layout_margin="5dp"
-                                android:background="#D8D8DA"
+                                android:background="@drawable/device_ui_rectangle"
                                 android:backgroundTint="#D8D8DA"
                                 android:gravity="center"
                                 android:orientation="vertical" />
@@ -156,7 +156,7 @@
                         android:layout_height="210dp"
                         android:layout_marginStart="5dp"
                         android:layout_marginEnd="20dp"
-                        android:background="#D8D8DA"
+                        android:background="@drawable/device_edit_circle_right"
                         android:backgroundTint="#D8D8DA"
                         android:gravity="center"
                         android:orientation="vertical" />
