--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_my_calendar.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_my_calendar.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F8FCF8"
-    tools:context=".MyCalendarActivity">
+    android:background="#F8FCF8">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -87,7 +86,8 @@
             <TextView
                 android:id="@+id/tv_calendar_day_indicator"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+                android:layout_weight="8"
                 android:fontFamily="@font/tmoney_bold"
                 android:gravity="center"
                 android:padding="12dp"
@@ -96,8 +96,32 @@
             <ListView
                 android:id="@+id/medicineInCalendarListView"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:divider="#FFFFFF" />
+                android:layout_height="0dp"
+                android:layout_weight="48"
+                android:divider="#FFFFFF">
+
+            </ListView>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="0dp"
+                android:layout_weight="10"
+                android:gravity="right|center_vertical"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/survey_button_in_calendar"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginEnd="15dp"
+                    android:backgroundTint="#E3F2C1"
+                    android:fontFamily="@font/tmoney_regular"
+                    android:includeFontPadding="false"
+                    android:text="건강 설문 조회"
+                    android:textColor="#757863"
+                    android:textSize="17dp"
+                    android:visibility="invisible" />
+            </LinearLayout>
         </LinearLayout>
 
     </LinearLayout>
