--- a/frontend/EYAK(rev2)/app/src/main/res/values/ic_launcher_background.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/values/ic_launcher_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="ic_launcher_background">#FFD7DA</color>
+    <color name="ic_launcher_background">#FFFFFF</color>
 </resources>
