--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_search.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_search.xml
@@ -331,6 +331,16 @@
                 android:layout_width="match_parent"
                 android:layout_height="20dp" />
 
+            <ImageView
+                android:id="@+id/makePDFBtn"
+                android:layout_width="match_parent"
+                android:layout_height="50dp"
+                android:src="@drawable/baseline_print_24" />
+
+            <Space
+                android:layout_width="match_parent"
+                android:layout_height="20dp" />
+
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
