add: 복약 정보 PDF 타이틀 추가

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_search.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_medicine_search.xml
@@ -7,6 +7,7 @@
     tools:context=".MedicineSearchFragment">
 
     <ScrollView
+        android:id="@+id/medicineSearchScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -371,5 +372,16 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/medicineSearchScrollDown"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="10dp"
+        android:rotation="270"
+        android:src="@drawable/baseline_first_page_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
