add: 오늘의 컨디션 아래로 내려기가

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/fragment_today_condition.xml
@@ -7,6 +7,7 @@
     tools:context=".TodayConditionFragment">
 
     <ScrollView
+        android:id="@+id/todayConditionScrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -446,5 +447,16 @@
 
         </LinearLayout>
     </ScrollView>
+
+    <ImageView
+        android:id="@+id/todayConditionScrollDown"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginEnd="10dp"
+        android:rotation="270"
+        android:src="@drawable/baseline_first_page_24"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintRight_toRightOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
