add: 자세히 제거, 클릭 시 효과, backpressed 설정

--- a/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/family_tab_list_view_item.xml
@@ -100,7 +100,8 @@
                     android:includeFontPadding="false"
                     android:text="자세히"
                     android:textColor="#757863"
-                    android:textSize="14sp" />
+                    android:textSize="14sp"
+                    android:visibility="gone" />
 
             </LinearLayout>
 
