--- a/frontend/EYAK(rev2)/app/src/main/res/layout/medicine_tab_list_view_item.xml
+++ b/frontend/EYAK(rev2)/app/src/main/res/layout/medicine_tab_list_view_item.xml
@@ -62,7 +62,8 @@
                 android:includeFontPadding="false"
                 android:text="자세히"
                 android:textColor="#757863"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone" />
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
